services/cron-deployment/cron-deployment.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cron-deployment
  annotations:
    kubernetes.io/change-cause: "{ARG:CHANGE_CAUSE}"
spec:
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: cron-checker
  # there should only be one of these right now, as there's no locking on checking
  # if we should enqueue or not
  replicas: 1
  template:
    metadata:
      labels:
        app: cron-checker
    spec:
      containers:
        - name: cron-ctr
          image: "gcr.io/balmy-ground-195100/gcp-cronchecker:{IMAGEID:gcp-cronchecker}"
          # Resource request intentionally less than resource limit, to ensure
          # this pod is a 'Burstable' pod, ref:
          #  https://medium.com/google-cloud/quality-of-service-class-qos-in-kubernetes-bb76a89eb2c6
          resources:
            requests:
              memory: "600Mi"
              cpu: "250m"
            limits:
              memory: "1200Mi"
              cpu: "400m"
        - name: cloudsql-proxy
          image: "gcr.io/cloudsql-docker/gce-proxy:1.11"
          resources:
            requests:
              memory: "70Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "125m"
          command: ["/bin/sh",
                    "-c",
                    "/cloud_sql_proxy -dir=/cloudsql -instances={BUILTIN:CLOUDSQL_INSTANCE_NAME}=tcp:5432 -credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
