services/cron-deployment/cc-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cc-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: cron-checker
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - ipBlock:
            # Allows all IPs
            cidr: 0.0.0.0/0
            except:
              # make sure to block link-local addresses,
              # since there's sensitive data in http://metadata
              - 169.254.0.0/16
  ingress:
